@@ -2559,14 +2559,15 @@ MHD_connection_handle_idle (struct MHD_Connection *connection)
               /* can try to keep-alive */
               connection->version = NULL;
               connection->state = MHD_CONNECTION_INIT;
-              /* read_buffer_size is correct here, as we want to
-                 preserve the entire read buffer allocation, even
-                 if in terms of the data we only care to preserve
-                 up to "read_buffer_offset" */
+              /* Reset the read buffer to the starting size,
+                 preserving the bytes we have already read. */
               connection->read_buffer
                 = MHD_pool_reset (connection->pool,
                                   connection->read_buffer,
-                                  connection->read_buffer_size);
+                                  connection->read_buffer_offset,
+                                  connection->daemon->pool_size / 2);
+              connection->read_buffer_size
+                = connection->daemon->pool_size / 2;
             }
 	  connection->client_aware = MHD_NO;
           connection->client_context = NULL;
